# model_deployment

./: .gitignore  README.md  requirements.txt
C++/: gen_txt_file.py  test_file.txt
C++/include/tensorflow/c/: LICENSE
C++/src/: CMakeLists.txt  example.cpp  model.cpp  model.h
JAVA/capi/: CMakeLists.txt  Example.java  JavaModel.java  jni_adapterc.cpp  jni_utils.cpp  jni_utils.h  model.h  readme.md
JAVA/tfapi/: Example.java  JavaModel.java  readme.md
flask/: client.py  http_service.py
javascript/: convert_keras.py  convert_tf.py  index.html  index.js  model_keras.js  model_tf.js
javascript/webmod_keras/: model.json
javascript/webmod_tf/: model.json
model/: keras_to_pb.py  restore_keras.py  restore_keraspb.py  restore_tf.py  restore_tfpb.py  save_keras.py  save_tf.py  tf_to_pb.py
model/saved_keras/: save.h5  save_weights.h5  to_json.json  to_yaml.yaml
model/saved_pb/: keras.pb  tensorflow.pb
model/saved_tf/: checkpoint  tf_model.data-00000-of-00001  tf_model.index
python/: analyze_keras_model.py  analyze_pb_model.py  example.py  python_model.py
python/keras/: events.out.tfevents.1559185695.DESKTOP-GDYSHI
python/pb/: events.out.tfevents.1559185698.DESKTOP-GDYSHI
tensorflow_serving/: client.py  convert_model.py  start_server.sh
tensorflow_serving/export/1/: saved_model.pb
tensorflow_serving/export/1/variables/: variables.data-00000-of-00001  variables.index
tflite/: model.tflite  pb_to_tflite.py  session_to_tflite.py
tflite/C++/: Makefile  example.cc  readme.md
tflite/JAVA/app/: build.gradle
tflite/JAVA/app/src/androidTest/java/com/example/gdyshi/hello_tf/: ExampleInstrumentedTest.java
tflite/JAVA/app/src/main/: AndroidManifest.xml
tflite/JAVA/app/src/main/java/com/example/gdyshi/hello_tf/: MainActivity.java  Model.java
tflite/JAVA/app/src/main/res/layout/: activity_main.xml
tflite/JAVA/app/src/main/res/values/: strings.xml
tflite/JAVA/app/src/test/java/com/example/gdyshi/hello_tf/: ExampleUnitTest.java
tflite/lib_app/: CMakeLists.txt  model.cc  model.h
tflite/python/: example.py  model.py
